crates/puffin-cli/tests/snapshots/remove__empty_array.snap
---
source: crates/puffin-cli/tests/remove.rs
info:
  program: puffin
  args:
    - remove
    - requests
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----

