crates/puffin-cli/tests/snapshots/remove__missing_dependencies_array.snap
---
source: crates/puffin-cli/tests/remove.rs
info:
  program: puffin
  args:
    - remove
    - flask
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
puffin::remove::parse_error

  × Failed to remove `flask` from `pyproject.toml`
  ╰─▶ no `[project.dependencies]` array found in `pyproject.toml`

