crates/puffin-cli/tests/snapshots/remove__missing_project_table.snap
---
source: crates/puffin-cli/tests/remove.rs
info:
  program: puffin
  args:
    - remove
    - flask
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
puffin::remove::parse

  × Failed to remove `flask` from `pyproject.toml`
  ╰─▶ no `[project]` table found in `pyproject.toml`

