crates/puffin-cli/tests/snapshots/remove__missing_pyproject_toml.snap
---
source: crates/puffin-cli/tests/remove.rs
info:
  program: puffin
  args:
    - remove
    - flask
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
puffin::remove::workspace_not_found

  × Could not find a `pyproject.toml` file in the current directory or any of
  │ its parents

