crates/puffin-cli/tests/snapshots/remove__normalize_name.snap
---
source: crates/puffin-cli/tests/remove.rs
info:
  program: puffin
  args:
    - remove
    - Flask
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----

