crates/puffin-cli/tests/snapshots/remove__remove_dependency.snap
---
source: crates/puffin-cli/tests/remove.rs
info:
  program: puffin
  args:
    - remove
    - flask
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----

